[gd_scene load_steps=26 format=3 uid="uid://22dveue4vdmj"]

[ext_resource type="Script" path="res://contents/scripts/player/controller.gd" id="1_xjcy2"]
[ext_resource type="AudioStream" uid="uid://4fhiib435nqq" path="res://contents/sounds/uuhhh.wav" id="2_txc5c"]
[ext_resource type="Script" path="res://contents/scripts/entity/generic/health.gd" id="3_eidq2"]
[ext_resource type="PackedScene" uid="uid://cj53hn6kg7mm5" path="res://contents/newbie/newbie.glb" id="4_yrx6w"]
[ext_resource type="Script" path="res://contents/scripts/player/camera.gd" id="5_5t6yp"]
[ext_resource type="AudioStream" uid="uid://bbo12d1bytu0s" path="res://contents/sounds/SWITCH3.wav" id="6_6maql"]
[ext_resource type="Texture2D" uid="uid://ba70cymcttdpy" path="res://contents/textures/CameraTiltUp.png" id="7_6bqr5"]
[ext_resource type="Texture2D" uid="uid://cbh2bcauhho82" path="res://contents/textures.bak/CameraTiltDown.png" id="8_ch7qa"]
[ext_resource type="Texture2D" uid="uid://b63w2g4and6cv" path="res://contents/textures.bak/CameraZoomIn.png" id="9_cogoy"]
[ext_resource type="Texture2D" uid="uid://bll74xogklke8" path="res://contents/textures.bak/CameraZoomOut.png" id="10_wjsfc"]
[ext_resource type="AudioStream" uid="uid://db35mwru4r1lq" path="res://contents/sounds/bfsl-minifigfoots1.mp3" id="11_gqevg"]
[ext_resource type="AudioStream" uid="uid://dq4qx31trwgph" path="res://contents/sounds/swoosh.wav" id="12_3kthx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tki2q"]
size = Vector3(1, 2, 0.5)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rahy8"]
height = 0.6
radius = 0.3

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h743t"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6urfh"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kmmf2"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j8gfy"]
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t4ose"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nk7rm"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uslbc"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_20nga"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wrl1q"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4lvqh"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_dp45i"]
states/Idle/node = SubResource("AnimationNodeAnimation_h743t")
states/Idle/position = Vector2(310.667, 75.3333)
states/Jump/node = SubResource("AnimationNodeAnimation_6urfh")
states/Jump/position = Vector2(404, 162)
states/Walk/node = SubResource("AnimationNodeAnimation_kmmf2")
states/Walk/position = Vector2(529.333, 102)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_j8gfy"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_t4ose"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_nk7rm"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_uslbc"), "Jump", "Walk", SubResource("AnimationNodeStateMachineTransition_20nga"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_wrl1q"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_4lvqh")]
graph_offset = Vector2(-18.8984, -10.9453)

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("char_model")]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_xjcy2")
char_model = NodePath("newbie")

[node name="oof" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_txc5c")

[node name="Health" type="Node" parent="."]
script = ExtResource("3_eidq2")

[node name="BodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_tki2q")

[node name="HeadCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3, 0)
shape = SubResource("CylinderShape3D_rahy8")

[node name="newbie" parent="." instance=ExtResource("4_yrx6w")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Skeleton3D" parent="newbie/Armature" index="0"]
bones/5/rotation = Quaternion(0, 0.707107, 0, 0.707107)
bones/6/rotation = Quaternion(0, -0.707107, 0, 0.707107)

[node name="AnimationTree" type="AnimationTree" parent="newbie"]
tree_root = SubResource("AnimationNodeStateMachine_dp45i")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/jump = false
parameters/conditions/walk = false

[node name="SpringCamera" type="SpringArm3D" parent="." node_paths=PackedStringArray("zoom_sound")]
transform = Transform3D(1, 0, 0, 0, 0.991445, 0.130526, 0, -0.130526, 0.991445, 0, 2.3, 0)
spring_length = 5.0
script = ExtResource("5_5t6yp")
zoom_sound = NodePath("SWITCH3")

[node name="Camera3D" type="Camera3D" parent="SpringCamera"]
fov = 70.0

[node name="SWITCH3" type="AudioStreamPlayer" parent="SpringCamera"]
stream = ExtResource("6_6maql")
volume_db = -6.0
max_polyphony = 4

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 31.0
text = "Tools"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 96.0
offset_right = 192.0
offset_bottom = 31.0
text = "Insert"

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 192.0
offset_right = 288.0
offset_bottom = 31.0
text = "Fullscreen"

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 288.0
offset_right = 384.0
offset_bottom = 31.0
text = "Help"

[node name="Button5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 384.0
offset_right = 480.0
offset_bottom = 31.0
text = "Exit"

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 192.0
grow_horizontal = 0
color = Color(0.5, 0.5, 0.5, 0.498039)

[node name="Label" type="Label" parent="Control/ColorRect"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 23.0
text = "Player List"

[node name="Playerlist" type="VBoxContainer" parent="Control/ColorRect"]
layout_mode = 0
offset_top = 32.0
offset_right = 92.0
offset_bottom = 72.0

[node name="Label" type="Label" parent="Control/ColorRect/Playerlist"]
layout_mode = 2
text = "Placeholder"

[node name="VSlider" type="VSlider" parent="Control/ColorRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = 56.0
offset_right = -32.0
offset_bottom = 160.0
grow_horizontal = 0
grow_vertical = 0
editable = false
scrollable = false

[node name="Label" type="Label" parent="Control/ColorRect/VSlider"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.0
offset_right = 26.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 0
text = "Health"
horizontal_alignment = 1

[node name="Label" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "To chat click here or press the \"/\" key"

[node name="Button" type="Button" parent="Control/Label"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -88.0
offset_right = -32.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("7_6bqr5")
flat = true

[node name="Button3" type="Button" parent="Control/Label"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -56.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("8_ch7qa")
flat = true

[node name="Button2" type="Button" parent="Control/Label"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -88.0
offset_right = -8.0
offset_bottom = -56.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("9_cogoy")
flat = true

[node name="Button4" type="Button" parent="Control/Label"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -56.0
offset_right = -8.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("10_wjsfc")
flat = true

[node name="walk" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_gqevg")
unit_size = 20.0
max_db = 6.0

[node name="jump" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_3kthx")

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="death" from="Health" to="." method="_on_death"]
[connection signal="finished" from="walk" to="." method="walk_sound_finished"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]

[editable path="newbie"]
